welcome.lessons.welcome.array.indexof.value.IndexOfValue.scala.error
indexOfValue:6: error: type mismatch;
 found   : Unit
 required: Int
		for(j<-0 to (nums.length -1)){
                     ^indexOfValue:5: error: type mismatch;
 found   : Unit
 required: Int
	if(nums.length>0){
        ^